--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.6",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@vercel/analytics": "^1.2.2",
     "framer-motion": "^11.0.3",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.2",
     "sharp": "^0.33.2",
     "swiper": "^11.1.4"
   },
