--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
