--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.12",
-    "alertifyjs": "^1.14.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
@@ -25,7 +24,8 @@
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
