--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.12",
+    "eslint-config-next": "^15.2.2",
     "framer-motion": "^11.0.3",
-    "next": "14.1.0",
+    "next": "^15.2.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
