--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "tailwind-rounded-out": "^2.0.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
