--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.546.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-rounded-out": "^2.0.0",
     "toastify-js": "^1.12.0"
   },
@@ -28,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "daisyui": "^5.0.28",
     "husky": "^9.1.7",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0"
   }
 }
