--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-snowfall": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-rounded-out": "^2.0.0",
     "toastify-js": "^1.12.0"
